# metamorph-c-lib

./: .gitignore  CMakeLists.txt  README.md  metamorph-clib.sln  test_functions.i
metamorph-clib/: cpp.hint  metamorph-clib.vcxproj  metamorph-clib.vcxproj.filters
metamorph-clib/Test Functions/: metamorph-clib.exe.recipe  vc142.idb
metamorph-clib/Test Functions/metamorph-clib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  metamorph-clib.lastbuildstate
metamorph-clib/src/: activations.h  cache.h  common.h  continuation.h  dyntypes.h  functions.h  gc.h  lambda.h  library.c  main.c  primf.h  test.c  test_functions.c
metamorph-clib/src/cache/: cache.c
metamorph-clib/src/dyntypes/: dyntypes.c  dyntypes_internal.h
metamorph-clib/src/functions/: activations.c  functions.c
metamorph-clib/src/primf/: booleans.c  continuation.c  lambda.c  numbers.c  numbers_integer.c  numbers_rational.c  numbers_real.c  pairs.c  ports.c  primf_internal.h  symbols.c
metamorph-clib/src/primf-test/: test_primf.c
metamorph-clib/src/tommath/: bn_s_mp_rand_platform.c
src/: cache.h  common.h  dyntypes.h  functions.h  primf.h  test.c  test_functions.c
src/cache/: cache.c  cache.h
src/dyntypes/: dyntypes.c  dyntypes.h
src/functions/: functions.c  functions.h
src/gc/: gc.h
src/primf/: booleans.c  pairs.c  primf.h  symbols.c
