cmake_minimum_required(VERSION 3.17)
project(metamorph_clib C)

set(CMAKE_C_STANDARD 99)

if(_TEST_FUNCTIONS)
    add_compile_definitions(_TEST_FUNCTIONS)
endif()
if(_TEST_PRIMF)
    add_compile_definitions(_TEST_PRIMF)
endif()

include_directories(metamorph-clib/src)
include_directories(metamorph-clib/src/cache)
include_directories(metamorph-clib/src/dyntypes)
include_directories(metamorph-clib/src/functions)
include_directories(metamorph-clib/src/primf)
include_directories(metamorph-clib/src/tommath)

add_executable(metamorph_clib
        metamorph-clib/src/cache/cache.c
        metamorph-clib/src/cache/cache_internal.h
        metamorph-clib/src/dyntypes/dyntypes.c
        metamorph-clib/src/dyntypes/dyntypes_internal.h
        metamorph-clib/src/functions/activations.c
        metamorph-clib/src/functions/functions.c
        metamorph-clib/src/functions/functions_internal.h
        metamorph-clib/src/primf/booleans.c
        metamorph-clib/src/primf/continuation.c
        metamorph-clib/src/primf/lambda.c
        metamorph-clib/src/primf/numbers.c
        metamorph-clib/src/primf/numbers_integer.c
        metamorph-clib/src/primf/numbers_rational.c
        metamorph-clib/src/primf/numbers_real.c
        metamorph-clib/src/primf/pairs.c
        metamorph-clib/src/primf/ports.c
        metamorph-clib/src/primf/primf_internal.h
        metamorph-clib/src/primf/symbols.c
        metamorph-clib/src/primf-test/test_primf.c
        metamorph-clib/src/tommath/bn_cutoffs.c
        metamorph-clib/src/tommath/bn_deprecated.c
        metamorph-clib/src/tommath/bn_mp_2expt.c
        metamorph-clib/src/tommath/bn_mp_abs.c
        metamorph-clib/src/tommath/bn_mp_add.c
        metamorph-clib/src/tommath/bn_mp_add_d.c
        metamorph-clib/src/tommath/bn_mp_addmod.c
        metamorph-clib/src/tommath/bn_mp_and.c
        metamorph-clib/src/tommath/bn_mp_clamp.c
        metamorph-clib/src/tommath/bn_mp_clear.c
        metamorph-clib/src/tommath/bn_mp_clear_multi.c
        metamorph-clib/src/tommath/bn_mp_cmp.c
        metamorph-clib/src/tommath/bn_mp_cmp_d.c
        metamorph-clib/src/tommath/bn_mp_cmp_mag.c
        metamorph-clib/src/tommath/bn_mp_cnt_lsb.c
        metamorph-clib/src/tommath/bn_mp_complement.c
        metamorph-clib/src/tommath/bn_mp_copy.c
        metamorph-clib/src/tommath/bn_mp_count_bits.c
        metamorph-clib/src/tommath/bn_mp_decr.c
        metamorph-clib/src/tommath/bn_mp_div.c
        metamorph-clib/src/tommath/bn_mp_div_2.c
        metamorph-clib/src/tommath/bn_mp_div_2d.c
        metamorph-clib/src/tommath/bn_mp_div_3.c
        metamorph-clib/src/tommath/bn_mp_div_d.c
        metamorph-clib/src/tommath/bn_mp_dr_is_modulus.c
        metamorph-clib/src/tommath/bn_mp_dr_reduce.c
        metamorph-clib/src/tommath/bn_mp_dr_setup.c
        metamorph-clib/src/tommath/bn_mp_error_to_string.c
        metamorph-clib/src/tommath/bn_mp_exch.c
        metamorph-clib/src/tommath/bn_mp_expt_u32.c
        metamorph-clib/src/tommath/bn_mp_exptmod.c
        metamorph-clib/src/tommath/bn_mp_exteuclid.c
        metamorph-clib/src/tommath/bn_mp_fread.c
        metamorph-clib/src/tommath/bn_mp_from_sbin.c
        metamorph-clib/src/tommath/bn_mp_from_ubin.c
        metamorph-clib/src/tommath/bn_mp_fwrite.c
        metamorph-clib/src/tommath/bn_mp_gcd.c
        metamorph-clib/src/tommath/bn_mp_get_double.c
        metamorph-clib/src/tommath/bn_mp_get_i32.c
        metamorph-clib/src/tommath/bn_mp_get_i64.c
        metamorph-clib/src/tommath/bn_mp_get_l.c
        metamorph-clib/src/tommath/bn_mp_get_ll.c
        metamorph-clib/src/tommath/bn_mp_get_mag_u32.c
        metamorph-clib/src/tommath/bn_mp_get_mag_u64.c
        metamorph-clib/src/tommath/bn_mp_get_mag_ul.c
        metamorph-clib/src/tommath/bn_mp_get_mag_ull.c
        metamorph-clib/src/tommath/bn_mp_grow.c
        metamorph-clib/src/tommath/bn_mp_incr.c
        metamorph-clib/src/tommath/bn_mp_init.c
        metamorph-clib/src/tommath/bn_mp_init_copy.c
        metamorph-clib/src/tommath/bn_mp_init_i32.c
        metamorph-clib/src/tommath/bn_mp_init_i64.c
        metamorph-clib/src/tommath/bn_mp_init_l.c
        metamorph-clib/src/tommath/bn_mp_init_ll.c
        metamorph-clib/src/tommath/bn_mp_init_multi.c
        metamorph-clib/src/tommath/bn_mp_init_set.c
        metamorph-clib/src/tommath/bn_mp_init_size.c
        metamorph-clib/src/tommath/bn_mp_init_u32.c
        metamorph-clib/src/tommath/bn_mp_init_u64.c
        metamorph-clib/src/tommath/bn_mp_init_ul.c
        metamorph-clib/src/tommath/bn_mp_init_ull.c
        metamorph-clib/src/tommath/bn_mp_invmod.c
        metamorph-clib/src/tommath/bn_mp_is_square.c
        metamorph-clib/src/tommath/bn_mp_iseven.c
        metamorph-clib/src/tommath/bn_mp_isodd.c
        metamorph-clib/src/tommath/bn_mp_kronecker.c
        metamorph-clib/src/tommath/bn_mp_lcm.c
        metamorph-clib/src/tommath/bn_mp_log_u32.c
        metamorph-clib/src/tommath/bn_mp_lshd.c
        metamorph-clib/src/tommath/bn_mp_mod.c
        metamorph-clib/src/tommath/bn_mp_mod_2d.c
        metamorph-clib/src/tommath/bn_mp_mod_d.c
        metamorph-clib/src/tommath/bn_mp_montgomery_calc_normalization.c
        metamorph-clib/src/tommath/bn_mp_montgomery_reduce.c
        metamorph-clib/src/tommath/bn_mp_montgomery_setup.c
        metamorph-clib/src/tommath/bn_mp_mul.c
        metamorph-clib/src/tommath/bn_mp_mul_2.c
        metamorph-clib/src/tommath/bn_mp_mul_2d.c
        metamorph-clib/src/tommath/bn_mp_mul_d.c
        metamorph-clib/src/tommath/bn_mp_mulmod.c
        metamorph-clib/src/tommath/bn_mp_neg.c
        metamorph-clib/src/tommath/bn_mp_or.c
        metamorph-clib/src/tommath/bn_mp_pack.c
        metamorph-clib/src/tommath/bn_mp_pack_count.c
        metamorph-clib/src/tommath/bn_mp_prime_fermat.c
        metamorph-clib/src/tommath/bn_mp_prime_frobenius_underwood.c
        metamorph-clib/src/tommath/bn_mp_prime_is_prime.c
        metamorph-clib/src/tommath/bn_mp_prime_miller_rabin.c
        metamorph-clib/src/tommath/bn_mp_prime_next_prime.c
        metamorph-clib/src/tommath/bn_mp_prime_rabin_miller_trials.c
        metamorph-clib/src/tommath/bn_mp_prime_rand.c
        metamorph-clib/src/tommath/bn_mp_prime_strong_lucas_selfridge.c
        metamorph-clib/src/tommath/bn_mp_radix_size.c
        metamorph-clib/src/tommath/bn_mp_radix_smap.c
        metamorph-clib/src/tommath/bn_mp_rand.c
        metamorph-clib/src/tommath/bn_mp_read_radix.c
        metamorph-clib/src/tommath/bn_mp_reduce.c
        metamorph-clib/src/tommath/bn_mp_reduce_2k.c
        metamorph-clib/src/tommath/bn_mp_reduce_2k_l.c
        metamorph-clib/src/tommath/bn_mp_reduce_2k_setup.c
        metamorph-clib/src/tommath/bn_mp_reduce_2k_setup_l.c
        metamorph-clib/src/tommath/bn_mp_reduce_is_2k.c
        metamorph-clib/src/tommath/bn_mp_reduce_is_2k_l.c
        metamorph-clib/src/tommath/bn_mp_reduce_setup.c
        metamorph-clib/src/tommath/bn_mp_root_u32.c
        metamorph-clib/src/tommath/bn_mp_rshd.c
        metamorph-clib/src/tommath/bn_mp_sbin_size.c
        metamorph-clib/src/tommath/bn_mp_set.c
        metamorph-clib/src/tommath/bn_mp_set_double.c
        metamorph-clib/src/tommath/bn_mp_set_i32.c
        metamorph-clib/src/tommath/bn_mp_set_i64.c
        metamorph-clib/src/tommath/bn_mp_set_l.c
        metamorph-clib/src/tommath/bn_mp_set_ll.c
        metamorph-clib/src/tommath/bn_mp_set_u32.c
        metamorph-clib/src/tommath/bn_mp_set_u64.c
        metamorph-clib/src/tommath/bn_mp_set_ul.c
        metamorph-clib/src/tommath/bn_mp_set_ull.c
        metamorph-clib/src/tommath/bn_mp_shrink.c
        metamorph-clib/src/tommath/bn_mp_signed_rsh.c
        metamorph-clib/src/tommath/bn_mp_sqr.c
        metamorph-clib/src/tommath/bn_mp_sqrmod.c
        metamorph-clib/src/tommath/bn_mp_sqrt.c
        metamorph-clib/src/tommath/bn_mp_sqrtmod_prime.c
        metamorph-clib/src/tommath/bn_mp_sub.c
        metamorph-clib/src/tommath/bn_mp_sub_d.c
        metamorph-clib/src/tommath/bn_mp_submod.c
        metamorph-clib/src/tommath/bn_mp_to_radix.c
        metamorph-clib/src/tommath/bn_mp_to_sbin.c
        metamorph-clib/src/tommath/bn_mp_to_ubin.c
        metamorph-clib/src/tommath/bn_mp_ubin_size.c
        metamorph-clib/src/tommath/bn_mp_unpack.c
        metamorph-clib/src/tommath/bn_mp_xor.c
        metamorph-clib/src/tommath/bn_mp_zero.c
        metamorph-clib/src/tommath/bn_prime_tab.c
        metamorph-clib/src/tommath/bn_s_mp_add.c
        metamorph-clib/src/tommath/bn_s_mp_balance_mul.c
        metamorph-clib/src/tommath/bn_s_mp_exptmod.c
        metamorph-clib/src/tommath/bn_s_mp_exptmod_fast.c
        metamorph-clib/src/tommath/bn_s_mp_get_bit.c
        metamorph-clib/src/tommath/bn_s_mp_invmod_fast.c
        metamorph-clib/src/tommath/bn_s_mp_invmod_slow.c
        metamorph-clib/src/tommath/bn_s_mp_karatsuba_mul.c
        metamorph-clib/src/tommath/bn_s_mp_karatsuba_sqr.c
        metamorph-clib/src/tommath/bn_s_mp_montgomery_reduce_fast.c
        metamorph-clib/src/tommath/bn_s_mp_mul_digs.c
        metamorph-clib/src/tommath/bn_s_mp_mul_digs_fast.c
        metamorph-clib/src/tommath/bn_s_mp_mul_high_digs.c
        metamorph-clib/src/tommath/bn_s_mp_mul_high_digs_fast.c
        metamorph-clib/src/tommath/bn_s_mp_prime_is_divisible.c
        metamorph-clib/src/tommath/bn_s_mp_rand_jenkins.c
        metamorph-clib/src/tommath/bn_s_mp_rand_platform.c
        metamorph-clib/src/tommath/bn_s_mp_reverse.c
        metamorph-clib/src/tommath/bn_s_mp_sqr.c
        metamorph-clib/src/tommath/bn_s_mp_sqr_fast.c
        metamorph-clib/src/tommath/bn_s_mp_sub.c
        metamorph-clib/src/tommath/bn_s_mp_toom_mul.c
        metamorph-clib/src/tommath/bn_s_mp_toom_sqr.c
        metamorph-clib/src/tommath/tommath.h
        metamorph-clib/src/tommath/tommath_class.h
        metamorph-clib/src/tommath/tommath_cutoffs.h
        metamorph-clib/src/tommath/tommath_private.h
        metamorph-clib/src/tommath/tommath_superclass.h
        metamorph-clib/src/activations.h
        metamorph-clib/src/cache.h
        metamorph-clib/src/common.h
        metamorph-clib/src/continuation.h
        metamorph-clib/src/dyntypes.h
        metamorph-clib/src/functions.h
        metamorph-clib/src/gc.h
        metamorph-clib/src/lambda.h
        metamorph-clib/src/primf.h
        metamorph-clib/src/test_functions.c)
